# codingame

./: CMakeLists.txt
training/easy/: CMakeLists.txt
training/easy/ASCII_Art/: CMakeLists.txt  main.cpp
training/easy/Chuck_Norris/: CMakeLists.txt  main.cpp
training/easy/Defibrillators/: CMakeLists.txt  main.cpp
training/easy/Horse_Racing_Duals/: CMakeLists.txt  main.cpp
training/easy/Mars_Lander_Episode_1/: CMakeLists.txt  main.cpp
training/easy/Mime_Type/: CMakeLists.txt  main.cpp
training/easy/Onboarding/: CMakeLists.txt  main.cpp
training/easy/Power_Of_Thor_Episode_1/: CMakeLists.txt  main.cpp
training/easy/Temperatures/: CMakeLists.txt  main.cpp
training/easy/The_Descent/: CMakeLists.txt  main.cpp
training/hard/: CMakeLists.txt
training/hard/Bender_Episode_2/: CMakeLists.txt  main.cpp
training/hard/Cgx_Formatter/: CMakeLists.txt  main.cpp
training/hard/Genome_Sequencing/: CMakeLists.txt  main.cpp
training/hard/Roller_Coaster/: CMakeLists.txt  main.cpp
training/hard/Skynet_Revolution_Episode_2/: CMakeLists.txt  main.cpp
training/hard/Super_Computer/: CMakeLists.txt  main.cpp
training/hard/Surface/: CMakeLists.txt  main.cpp
training/hard/The_Labyrinth/: CMakeLists.txt  main.cpp
training/medium/: CMakeLists.txt
training/medium/Bender_Episode_1/: CMakeLists.txt  main.cpp
training/medium/Conway_Sequence/: CMakeLists.txt  main.cpp
training/medium/Dont_Panic_Episode_1/: CMakeLists.txt  main.cpp
training/medium/Dwarfs_Standing_On_The_Shoulders_Of_Giants/: CMakeLists.txt  main.cpp
training/medium/Mars_Lander_Episode_2/: CMakeLists.txt  main.cpp
training/medium/Mayan_Calculation/: CMakeLists.txt  main.cpp
training/medium/Network_Cabling/: CMakeLists.txt  main.cpp
training/medium/Scrabble/: CMakeLists.txt  main.cpp
training/medium/Shadows_Of_The_Knight_Episode_1/: CMakeLists.txt  main.cpp
training/medium/Skynet_Revolution_Episode_1/: CMakeLists.txt  (+1 more)
(+15 files in other folders)
