cmake_minimum_required(VERSION 3.0)

add_subdirectory(Teads_Sponsored_Contest)
add_subdirectory(Mars_Lander_Episode_2)
add_subdirectory(Dwarfs_Standing_On_The_Shoulders_Of_Giants)
add_subdirectory(Network_Cabling)
add_subdirectory(Telephone_Numbers)
add_subdirectory(Conway_Sequence)
add_subdirectory(Scrabble)
add_subdirectory(Bender_Episode_1)
add_subdirectory(The_Last_Crusade_Episode_1)
add_subdirectory(The_Gift)
add_subdirectory(Stock_Exchange_Losses)
add_subdirectory(Mayan_Calculation)
add_subdirectory(Shadows_Of_The_Knight_Episode_1)
add_subdirectory(Dont_Panic_Episode_1)
add_subdirectory(War)
add_subdirectory(There_Is_No_Spoon_Episode_1)
add_subdirectory(Skynet_Revolution_Episode_1)
